
  o Build Changes:
    * Promote now uses the source trove for packages to determine the
      source trove for components instead of downloading the components
      themselves.
    * Promote no longer uses getTroves() to look up clone history; it uses
      getTroveInfo() instead. This provides a significant performance
      improvement as well as a significant RAM savings.

  o Internal Changes:
    * Moved findOrdering boolean into DependencyCheck object
    * Cleaned up graph code during dependency checks to remove redundant
      calls in some (relatively obscure) cases
    * Reworked MPI to long conversion to work on four bytes at a time
    * TroveChangeSet objects in changesets are now sorted by the
      name/version/flavor of the new trove
    * Thawing ReferencedTroveSet objects now looks up values with a single
      slice instead of one index at a time for a performance improvement
    * Check the dependencyCache when thawing Dependency objects before
      thawing them instead of after (helping performance as well as memory
      usage)
    * Use a WeakValueDictionary for the dependencyCache instead of an
      ObjectCache

Changes in 2.0.22:
  o Build Changes:
    * The loadSuperClass and loadInstalled methods now returns the loaded
      recipe class so that the loaded class can be referenced anonymously.
      This makes factories more flexible. (CNY-2900)
    * The addPatch source action now takes a "filter" keyword argument
      that provides a command line that can modify the patch; for
      example, by calling the filterdiff program. (CNY-2874)
    * Builds previously failed in some circumstances when Conary
      discovered no need only for :runtime components listed in
      buildRequires.  This has been fixed, and error reporting
      improved for similar classes of bugs in the future. (CNY-2904)

  o Client Changes:
    * The new boolean conaryrc option downloadFirst has been added to